--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
 
         <aside class="sidebar-info">
             <div class="logo-area">
-                <img src="https://i.imgur.com/K75uG9g.png" alt="Logo Face Mi">
+                <img src="https://static.wixstatic.com/media/da4f03_1bc51c11d4de4f52b6b340a0cb356b8e~mv2.png" alt="Logo Face Mi">
                 <h2>Viagem Face Mi — Braga → Porto</h2>
             </div>
 
             <div class="intro-text">
-                <p>Comece na clínica em Braga e descubra o caminho até a nova clínica no Porto. Use as setas do teclado para se mover.</p>
+                <p>Comece na unidade de Braga (representada no tabuleiro) e descubra o caminho até a nova unidade no Porto. Use as setas do teclado para se mover.</p>
             </div>
 
             <div class="status-box">
